<resources>
    <string name="app_name">春笋红包</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">红包</string>
    <string name="ad">发广告</string>
    <string name="interaction">互动</string>
    <string name="me">我</string>
    <string name="account">账号</string>
    <string name="input_account">请输入手机号/春笋号</string>
    <string name="login_pwd">登录密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="quick_login">快捷登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login">登 录</string>
    <string name="personal_account">个人账号</string>
    <string name="company_account">企业账号</string>
    <string name="phonenum">手机号</string>
    <string name="input_phonenum">请输入手机号</string>
    <string name="validate_code">验证码</string>
    <string name="input_validate_code">请输入短信验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="invite_code">邀请码</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="optional">选填</string>
    <string name="agreement">阅读并同意 《春笋红包注册协议》</string>
    <string name="next_step">下一步</string>
    <string name="pwd">密码</string>
    <string name="comfirm_pwd">确认密码</string>
    <string name="input_again_pwd">请再次输入密码</string>
    <string name="register">注 册</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="save_pic">保存图片</string>
    <string name="scan_two_dimension_code">扫描二维码</string>
    <string name="send">发 送</string>
    <string name="input_comment">请输入评论内容...</string>
    <string name="red_detail_guarantee">我要担保交易</string>
    <string name="collection">收藏</string>
    <string name="report">举报</string>
    <string name="split_red_envelope">拆红包</string>
    <string name="red_envelope">现金红包</string>
    <string name="coupon_envelope">红包礼券</string>
    <string name="comment">评论</string>
    <string name="red_envelope_collect_list">红包领取记录</string>
    <string name="repeat_red_envelope_confirm">点击转发，开始收益</string>
    <string name="send_ad_record">发广告记录</string>
    <string name="wallet">钱包</string>
    <string name="not_receiving_red">未领取红包</string>
    <string name="setting">设置</string>
    <string name="scan_coupon">扫券</string>
    <string name="chunsun_coupon">春笋券</string>
    <string name="novice_guidelines">新手指引</string>
    <string name="circle">圈子</string>
    <string name="at_me">与我相关</string>
    <string name="authentication_instruction_1">1.上传公司有效期内营业执照原件，或者加盖公章复印件。</string>
    <string name="authentication_instruction_2">2.上传办理人，手持身份证正面照，面部不可遮挡，身份证文字头像必须清晰。</string>
    <string name="authentication_instruction_3">3.填写公司信息。</string>
    <string name="range">范  围：</string>
    <string name="type">类  型：</string>
    <string name="total_quantity">总数量：</string>
    <string name="aggregate_amount">总金额：</string>
    <string name="not_receiving">未领取：</string>
    <string name="have_received">已领取：</string>
    <string name="withdrawal_money_tips">提示：每天只能成功提现或者充值一次。</string>
    <string name="account_details">账户明细</string>
    <string name="phone_recharge">手机话费充值</string>
    <string name="phone_recharge_prompt">1~5个工作日内到账</string>
    <string name="alipay_withdraw_cash_prompt">2个工作日内到账</string>
    <string name="alipay_withdraw_cash">提现到支付宝</string>
    <string name="bank_withdraw_cash_prompt">5个工作日内到账</string>
    <string name="bank_withdraw_cash">提现到银行卡</string>
    <string name="balance">可用余额：</string>
    <string name="recharge">充值</string>
    <string name="alipay_withdraw_cash_remind">因资料填写失败导致的提现失败，本平台不负任何责任，产生的手续费不予退回！！</string>
    <string name="input_alipay_account">请输入支付宝账号</string>
    <string name="full_name">姓名</string>
    <string name="input_alipay_amount_name">请输入支付宝账户姓名</string>
    <string name="input_alipay_same_amount_name">填写姓名要与支付宝账号姓名一致</string>
    <string name="amount">金额</string>
    <string name="commit">提 交</string>
    <string name="title_activity_withdrawcash_confirm">WithdrawcashConfirmActivity</string>
    <string name="confirm_withdraw_cash">确认提现</string>
    <string name="poundage">[ 手续费</string>
    <string name="title_activity_phone_recharge">PhoneRechargeActivity</string>
    <string name="phone_recharge_remind">因资料填写失败导致的充值错误或失败，本平台不负任何责任！！</string>
    <string name="input_recharge_phone">请输入充值手机号</string>
    <string name="title_activity_phone_recharge_confirm">PhoneRechargeConfirmActivity</string>
    <string name="carrier_operator">营运商</string>
    <string name="recharge_mobile">充值话费</string>
    <string name="pay_amount">支付金额</string>
    <string name="confirm_pay">确认支付</string>
    <string name="title_activity_balance_recharge">BalanceRechargeActivity</string>
    <string name="amount_yuan">金额（元）</string>
    <string name="input_recharge_amount">请输入充值金额</string>
    <string name="choose_pay_method">选择付款方式</string>
    <string name="alipay_pay">支付宝付款</string>
    <string name="bank_pay">银行卡付款</string>
    <string name="bank_pay_remind">（支持15元以上）</string>
    <string name="accumulated_income">累计收益（元）</string>
    <string name="invite_accumulated_income">邀请累计收益（元）</string>
    <string name="available_balance">可用余额（元）</string>
    <string name="withdraw_cash">提现</string>
    <string name="my_invite">分享邀请码</string>
    <string name="received_amount">已获得奖金</string>
    <string name="yuan">元</string>
    <string name="invite_remind">马上邀请好友再奖3元</string>
    <string name="invite_remind_one">1.注册成功系统赠送唯一邀请码</string>
    <string name="invite_remind_two">2.分享您的唯一邀请码，只要有好友使用您的唯一邀请码或手机号注册成功，并完成试玩2分钟多次成功抢红包就奖励您3元。</string>
    <string name="find_my_invite_record">查看我的奖励记录</string>
    <string name="title_activity_invite_record_list">InviteRecordListActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="register_reward">注册奖励您</string>
    <string name="send_ad_reward">发广告奖励您</string>
    <string name="reward_amount">获得奖励</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="contact_tel">联系电话：0379-80859669</string>
    <string name="contact_email">邮箱：576806999@qq.com</string>
    <string name="contact_qq">QQ：576806999</string>
    <string name="contact_qq_group">QQ群：231521296</string>
    <string name="contact_address">地址：洛阳市洛龙区五洲大厦</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="old_pwd">旧密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="title_activity_user_privacy">UserPrivacyActivity</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="occupation">职业</string>
    <string name="telephone">电话</string>
    <string name="wechat">微信</string>
    <string name="sended_red_envelope">已发红包</string>
    <string name="name">名字</string>
    <string name="immediate_send">即时发送</string>
    <string name="time_send">定时发送</string>
    <string name="price">单个金额</string>
    <string name="input_price">请输入一条广告价格</string>
    <string name="num">红包个数</string>
    <string name="input_num">请输入本广告发出条数</string>
    <string name="send_days">发放天数</string>
    <string name="input_send_days">请输入总发放天数</string>
    <string name="show_time">显示时间</string>
    <string name="delayed">定时</string>
    <string name="invoice">发票</string>
    <string name="ad_price">广告价</string>
    <string name="ad_content">输入内容不超过2000个字，请不要发布黄色、暴力或对他人、团体、造成影响的言论或内容，一经发现将冻结资金，永久封号</string>
    <string name="ad_title">输入标题不超过30字</string>
    <string name="distance">距离</string>
    <string name="city">市</string>
    <string name="province">省</string>
    <string name="choose_type">选择类型</string>
    <string name="ad_total_price">广告总价</string>
    <string name="delayed_show_cost">延时显示费</string>
    <string name="expense_of_taxation">税费</string>
    <string name="service_charge">服务费</string>
    <string name="mailing_fee">发票邮寄费</string>
    <string name="total_price">总金额</string>
    <string name="account_balance">账户余额</string>
    <string name="ad_pay_prompt">提示：余额不足，请使用其他方式支付！</string>
    <string name="this_pay_amount">本次支付金额：</string>
    <string name="zero_yuan">￥0元</string>
    <string name="pay_success_prompt">广告已提交，审核通过后，即可推送至主页面！</string>
    <string name="finish">完成</string>
    <string name="need_pay_prompt">需要支付金额：</string>
    <string name="pay_error_prompt">支付失败原因未知，麻烦大侠返回发广告，重新支付！</string>
    <string name="send_range">选择投放范围</string>
    <string name="life">生活</string>
    <string name="link">链接</string>
    <string name="repeat">转发</string>
    <string name="company">企业</string>
    <string name="coupon">券</string>
    <string name="ad_confirm">定制专属红包广告</string>
    <string name="multiple">倍套餐</string>
    <string name="buy_multiple">购买套餐倍数</string>
    <string name="choose_meal">选择套餐</string>
    <string name="near">附近</string>
    <string name="image_text">图文</string>
    <string name="choose_address">选择投放范围</string>
    <string name="unlimited">不限</string>
    <string name="circle_range">周边</string>
    <string name="chose">选好了</string>
    <string name="chunsun_circle">春笋圈子</string>
    <string name="send_ad_agreement">《春笋红包发广告协议》</string>
    <string name="upload_success">上传成功！</string>
    <string name="wait_examine">正在等待审核...</string>
    <string name="examine_desc">正常审核3-5工作日，优先审核1工作日</string>
    <string name="to_circle">去圈子看看</string>
    <string name="sync_friend">同步发送朋友圈</string>
    <string name="sync_desc">（同步发送，优先审核）</string>
    <string name="create_fail">对不起！发布失败！</string>
    <string name="create_fail_msg">错误信息：网络错误</string>
    <string name="fail_to_circle">放弃，去圈子逛逛</string>
    <string name="try_again_create">留下，再试试</string>
    <string name="money_icon">￥</string>
    <string name="pay_total_money">应付总金额：</string>
    <string name="wecharmoments">朋友圈</string>
    <string name="qzone">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="get_moeny">直接领钱</string>
    <string name="notice_board">系统公告</string>
    <string name="nationwide">全国</string>
    <string name="reward">奖励：</string>
    <string name="please_input_amount">请输入金额</string>
    <string name="leave_message">留言：</string>
    <string name="please_input_leave_message">请输入留言内容......</string>
    <string name="confirm_reward">确定奖励</string>
    <string name="qq">QQ</string>
    <string name="send_red_envelope">发送红包</string>
    <string name="account_desc">个性签名</string>
    <string name="selected">选取</string>
    <string name="title_activity_create_ad_next_step">CreateAdNextStepActivity</string>
    <string name="title_activity_create_ad_repeat_next_step">CreateAdRepeatNextStepActivity</string>
    <string name="title_activity_push_notice_show">PushNoticeShowActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_ad_coupon_next_step">CreateAdCouponNextStepActivity</string>
    <string name="title_activity_chunsun_coupon_web">ChunsunCouponWebActivity</string>
    <string name="title_activity_mine_invite_code_web">MineInviteCodeWebActivity</string>
    <string name="title_activity_preview_red_detail">PreviewRedDetailActivity</string>
    <string name="title_activity_preview_coupon_red_detail_fragment">
        PreviewCouponRedDetailFragment
    </string>
    <string name="title_activity_preview_web_red_detail">PreviewWebRedDetailActivity</string>
    <string name="title_activity_preview_repeat_red_detail">PreviewRepeatRedDetailActivity</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="title_activity_circle_detail">CircleDetailActivity</string>
    <string name="title_activity_create_circle">CreateCircleActivity</string>
</resources>