<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chunsun.redenvelope.ui.activity.personal.BalanceRechargeActivity">

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/amount_yuan"
            android:textSize="@dimen/font_size_sp_14" />

        <EditText
            android:id="@+id/et_recharge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_recharge_amount"
            android:numeric="decimal"
            android:textSize="@dimen/font_size_sp_14" />
    </LinearLayout>

    <include layout="@layout/layout_gray_half_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/global_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/choose_pay_method"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/font_size_sp_14" />
    </LinearLayout>

    <include layout="@layout/layout_gray_half_line" />

    <LinearLayout
        android:id="@+id/ll_zhifubao"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:src="@drawable/img_zhifubao" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/alipay_pay"
            android:textSize="@dimen/font_size_sp_14" />

        <ImageView
            android:id="@+id/iv_zhifubao"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/img_select_group" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:background="#c8c7cd" />

    <LinearLayout
        android:id="@+id/ll_bankcard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:src="@drawable/img_bankcard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/bank_pay"
            android:textSize="@dimen/font_size_sp_14" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/bank_pay_remind"
            android:textSize="@dimen/font_size_sp_12" />

        <ImageView
            android:id="@+id/iv_bankcard"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/img_select_group"
            android:visibility="gone" />
    </LinearLayout>

    <include layout="@layout/layout_gray_half_line" />

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button_red_radius"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_sp_18" />

</LinearLayout>
