<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_gray"
    tools:context="com.chunsun.redenvelope.ui.activity.ad.CreateCircleResultActivity">

    <include layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:id="@+id/rl_success_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_radius_white"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="39dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/img_circle_success" />

        <TextView
            android:id="@+id/tv_result_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_icon"
            android:layout_toRightOf="@id/iv_icon"
            android:singleLine="true"
            android:text="@string/upload_success"
            android:textColor="@color/global_red"
            android:textSize="@dimen/font_size_sp_24" />

        <TextView
            android:id="@+id/tv_result_msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_result_msg"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/iv_icon"
            android:singleLine="true"
            android:text="@string/wait_examine"
            android:textColor="@color/font_gray5"
            android:textSize="@dimen/font_size_sp_10" />

        <TextView
            android:id="@+id/tv_result_msg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_result_msg2"
            android:layout_toRightOf="@id/iv_icon"
            android:singleLine="true"
            android:text="@string/examine_desc"
            android:textColor="@color/font_gray5"
            android:textSize="@dimen/font_size_sp_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_result_msg3"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_to_circle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_radius_gray"
                android:gravity="center"
                android:text="@string/to_circle"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_sp_16" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_sync_friend"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_radius_red"
                    android:gravity="center"
                    android:text="@string/sync_friend"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_sp_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:text="@string/sync_desc"
                    android:textColor="@color/global_red"
                    android:textSize="@dimen/font_size_sp_12" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_radius_white"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iv_error_icon"
            android:layout_width="39dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/img_circle_error" />

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_error_icon"
            android:singleLine="true"
            android:text="@string/create_fail"
            android:textColor="@color/font_gray5"
            android:textSize="@dimen/font_size_sp_22" />

        <TextView
            android:id="@+id/tv_error_msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_error_msg"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/iv_error_icon"
            android:singleLine="true"
            android:text="@string/create_fail_msg"
            android:textColor="@color/font_gray5"
            android:textSize="@dimen/font_size_sp_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_error_msg2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_error_to_circle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_radius_gray"
                android:gravity="center"
                android:text="@string/fail_to_circle"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_sp_16" />

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/shape_radius_red"
                android:gravity="center"
                android:text="@string/try_again_create"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_sp_16" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
