<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chunsun.redenvelope.ui.activity.personal.WithdrawCashActivity">

    <include layout="@layout/layout_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff00"
                android:padding="6dp"
                android:text="@string/alipay_withdraw_cash_remind"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_sp_16" />

            <LinearLayout
                android:id="@+id/ll_withdrawal_zhifubao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_size_sp_16" />

                    <EditText
                        android:id="@+id/et_zhifubao_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_alipay_account"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/font_hint_gray"
                        android:textSize="@dimen/font_size_sp_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_size_sp_16" />

                    <EditText
                        android:id="@+id/et_zhifubao_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/input_alipay_amount_name"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/font_hint_gray"
                        android:textSize="@dimen/font_size_sp_16" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:text="@string/input_alipay_same_amount_name"
                    android:textColor="#2d9bfa"
                    android:textSize="@dimen/font_size_sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_sp_16" />

                <RadioGroup
                    android:id="@+id/rg_withdrawal_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_apply_withdrawal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button_red_radius"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_sp_18" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
